# ECOMMERCE-PRODUCT-ASSISTANT

./: .dockerignore  .gitignore  DEPLOYMENT-STATUS.md  Dockerfile  cleanup-aws-resources.sh  populate_db.py  pyproject.toml  requirements.txt  scrapper_ui.py  terminate-resources.sh  test_simple_workflow.py
.github/workflows/: deploy-old.yml.disabled  deploy-v2.yml  deploy.yml
infra/: eks-with-ecr.yaml
k8/: deployment.yaml
notebook/: langchain_document_experiment.ipynb
product_assistant/: __init__.py
product_assistant/config/: config.yaml
product_assistant/etl/: data_ingestion.py
product_assistant/evaluation/: ragas_eval.py  ragas_eval_backup.py
product_assistant/logger/: __init__.py
product_assistant/mcp_servers/: client.py  product_search_server.py
product_assistant/retriever/: retrieval.py
product_assistant/router/: main.py
product_assistant/utils/: model_loader.py
product_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py
scripts/: update-k8s-secrets.sh
templates/: index.html
