[project]
name = "ecommerce-product-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "structlog>=25.4.0",
    "undetected-chromedriver>=3.5.5",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "astrapy>=0.7.0",
    "ragas>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "langchain-mcp-adapters>=0.1.10",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "mcp-server>=0.1.4",
    "mcp-python>=0.1.4",
    "ddgs>=9.6.0",
]

# Optional: authors, license
authors = [{ name = "Venky Maganahalli" }]
license = { text = "Proprietary" }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["product_assistant*"]
